fix collapse buttons not being sticky

--- a/mysite/static/assets/results.scss
+++ b/mysite/static/assets/results.scss
@@ -978,63 +978,6 @@ body {
             }
         }
 
-        #buttons-floating {
-            position: absolute;
-            bottom: 10px;
-            right: 10px;
-            z-index: 96;
-
-            display: flex;
-            flex-direction: row;
-            gap: 5px;
-
-            @media (max-width: 600px) {
-                flex-direction: column;
-                bottom: calc((var(--nav-height) + var(--nav-padding) * 2) + 10px);
-            }
-
-            #scroll-to-top, #expand-collapse {
-                height: 40px;
-                width: 40px;
-
-                display: flex;
-                justify-content: center;
-                align-items: center;
-
-                border-radius: 50%;
-                background-color: teal;
-
-            }
-
-            #expand-collapse::before,
-            #expand-collapse::after,
-            #scroll-to-top::before {
-                content: '';
-                height: 10px;
-                width: 10px;
-                border-top: 2px solid white;
-                border-left: 2px solid white;
-            }
-
-            #scroll-to-top::before {
-                transform: rotate(45deg) translateY(15%) translateX(15%);
-            }
-
-            #expand-collapse {
-                background-color: #a22a45;
-                flex-direction: column-reverse;
-                &.closed {
-                    flex-direction: column;
-                }
-                &::after {
-                    transform: rotate(-135deg) translateY(2px) translateX(2px);
-                }
-                &::before {
-                    transform: rotate(45deg) translateY(2px) translateX(2px);
-                }
-            }
-        }
-
         footer {
             font-family: "Open Sans", sans-serif;
             color: oldlace;
@@ -1046,6 +989,63 @@ body {
             justify-content: center;
         }
 
+    }
+
+    #buttons-floating {
+        position: fixed;
+        bottom: 10px;
+        right: 10px;
+        z-index: 96;
+
+        display: flex;
+        flex-direction: row;
+        gap: 5px;
+
+        @media (max-width: 600px) {
+            flex-direction: column;
+            bottom: calc((var(--nav-height) + var(--nav-padding) * 2) + 10px);
+        }
+
+        #scroll-to-top, #expand-collapse {
+            height: 40px;
+            width: 40px;
+
+            display: flex;
+            justify-content: center;
+            align-items: center;
+
+            border-radius: 50%;
+            background-color: teal;
+
+        }
+
+        #expand-collapse::before,
+        #expand-collapse::after,
+        #scroll-to-top::before {
+            content: '';
+            height: 10px;
+            width: 10px;
+            border-top: 2px solid white;
+            border-left: 2px solid white;
+        }
+
+        #scroll-to-top::before {
+            transform: rotate(45deg) translateY(15%) translateX(15%);
+        }
+
+        #expand-collapse {
+            background-color: #a22a45;
+            flex-direction: column-reverse;
+            &.closed {
+                flex-direction: column;
+            }
+            &::after {
+                transform: rotate(-135deg) translateY(2px) translateX(2px);
+            }
+            &::before {
+                transform: rotate(45deg) translateY(2px) translateX(2px);
+            }
+        }
     }
 }
 
